wrote sequence for learn-ir-signal, send-ir-signal

--- a/spec/sequence-diagram/Makefile
+++ b/spec/sequence-diagram/Makefile
@@ -1,3 +1,9 @@
 
-seqdiag:
-	mscgen -T png -i *.msc
+OUT = connect.png learn-ir-signal.png send-ir-signal.png
+
+all: $(OUT)
+
+.SUFFIXES: .msc .png
+
+.msc.png:
+	mscgen -T png -i $<
